[project]
name = "spatio-temporal-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geocube>=0.7.1",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyreadr>=0.5.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
]
