[project]
name = "spatio-temporal-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.2.0",
    "geocube>=0.7.1",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyreadr>=0.5.2",
    "rasterio>=1.4.3",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
]
